--- a/index.html
+++ b/index.html
@@ -142,41 +142,43 @@
 
   <!-- Contato -->
   <section id="contato" class="section contact">
-    <div class="container grid-contact">
-      <div class="contact-card">
-        <h3>Solicite um Orçamento</h3>
-        <!-- FormSubmit AJAX -->
-        <form id="contactForm" action="https://formsubmit.co/entregasville@gmail.com" method="POST" novalidate>
-          <input type="hidden" name="_captcha" value="false">
-          <input type="hidden" name="_template" value="table">
-          <input type="hidden" name="_subject" value="Novo contato - Entregas Ville">
-          <input type="text" name="_honey" style="display:none">
+  <div class="container grid-contact">
+    <div class="contact-card">
+      <h3>Solicite um Orçamento</h3>
+      <!-- FormSubmit -->
+      <form id="contactForm" action="https://formsubmit.co/fadcc8fe0de715322b93352ce494571c" method="POST" novalidate>
+        <!-- Configurações extras -->
+        <input type="hidden" name="_captcha" value="false">
+        <input type="hidden" name="_template" value="table">
+        <input type="hidden" name="_subject" value="Novo contato - Entregas Ville">
+        <input type="text" name="_honey" style="display:none">
 
-          <label>Nome
-            <input type="text" name="nome" placeholder="Seu nome completo" required>
-          </label>
-          <label>E-mail
-            <input type="email" name="email" placeholder="seu@email.com" required>
-          </label>
-          <label>Mensagem
-            <textarea name="mensagem" rows="5" placeholder="Conte-nos sobre sua necessidade..." required></textarea>
-          </label>
+        <label>Nome
+          <input type="text" name="nome" placeholder="Seu nome completo" required>
+        </label>
+        <label>E-mail
+          <input type="email" name="email" placeholder="seu@email.com" required>
+        </label>
+        <label>Mensagem
+          <textarea name="mensagem" rows="5" placeholder="Conte-nos sobre sua necessidade..." required></textarea>
+        </label>
 
-          <button class="btn btn-primary btn-block" type="submit" id="submitBtn">Enviar Mensagem</button>
-          <div id="formStatus" class="form-status" role="status" aria-live="polite"></div>
-        </form>
-      </div>
-
-      <aside class="contact-info">
-        <h4>Nossos Contatos</h4>
-        <ul>
-          <li><span class="ci-badge">📞</span><div><b>Telefone</b><br><span>(47) 99742-5798</span></div></li>
-          <li><span class="ci-badge">✉️</span><div><b>E-mail</b><br><span>entregasville@gmail.com</span></div></li>
-          <li><span class="ci-badge">📍</span><div><b>Endereço</b><br><span>Joinville - SC</span></div></li>
-        </ul>
-      </aside>
+        <button class="btn btn-primary btn-block" type="submit" id="submitBtn">Enviar Mensagem</button>
+        <div id="formStatus" class="form-status" role="status" aria-live="polite"></div>
+      </form>
     </div>
-  </section>
+
+    <aside class="contact-info">
+      <h4>Nossos Contatos</h4>
+      <ul>
+        <li><span class="ci-badge">📞</span><div><b>Telefone</b><br><span>(47) 99742-5798</span></div></li>
+        <li><span class="ci-badge">✉️</span><div><b>E-mail</b><br><span>entregasville@gmail.com</span></div></li>
+        <li><span class="ci-badge">📍</span><div><b>Endereço</b><br><span>Joinville - SC</span></div></li>
+      </ul>
+    </aside>
+  </div>
+</section>
+
 
   <!-- Footer -->
   <footer class="site-footer">
