--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
         <h5>Siga-nos</h5>
         <ul class="social">
           <li><a href="#">facebook</a></li>
-          <li><a href="#">instagram</a></li>
-          <li><a href="#">linkedin</a></li>
+          <li><a href="https://www.instagram.com/entregas.ville/">instagram</a></li>
         </ul>
       </div>
     </div>
