--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <a href="#contato">Contato</a>
       </nav>
 
-      <a href="#contato" class="btn btn-pill btn-primary">Solicitar Orçamento</a>
+<a href="#contato" class="btn btn-pill btn-primary cta-header">Solicitar Orçamento</a>
       <button class="hamburger" aria-label="Abrir menu">
         <span></span><span></span><span></span>
       </button>
