--- a/index.html
+++ b/index.html
@@ -140,7 +140,21 @@
         </article>
       </div>
     </div>
+
+  <br>
+  <div class="banner-l">
+  <picture>
+    <!-- Mostra esta se for até 768px -->
+    <source srcset="imagens/banner-mobile.png" media="(max-width: 768px)">
+    <!-- Mostra esta em telas maiores -->
+    <img src="imagens/banner3.png" alt="Promoção Entregas Ville" class="banner-img" loading="lazy">
+  </picture>
+</div>
+
+
   </section>
+
+  
 
   <!-- Contato -->
    <section id="contato" class="section contact">
