--- a/index.html
+++ b/index.html
@@ -64,19 +64,21 @@
         <article class="card light">
           <div class="icon-wrap"><span class="icon">🚀</span></div>
           <h3>Nossa Missão</h3>
-          <p>Facilitar a logística para empresas de todos os tamanhos, oferecendo um serviço de entrega rápido, confiável e acessível.</p>
+          <p>Facilitar a logística para empresas de todos os tamanhos, oferecendo um serviço de entrega rápido, confiável e adaptado às necessidades do mercado. Atuamos como parceiros estratégicos, garantindo eficiência nas coletas e entregas por motoboy, otimizando tempo, reduzindo custos operacionais e assegurando que cada pacote chegue ao destino com agilidade e segurança.</p>
         </article>
 
         <article class="card light">
           <div class="icon-wrap"><span class="icon">🛡️</span></div>
           <h3>Nossa Visão</h3>
-          <p>Ser a principal referência em soluções de entrega em Joinville - SC, reconhecida pela excelência operacional, e compromisso com a satisfação do cliente.</p>
+          <p>Ser a principal referência em soluções de entrega em Joinville - SC, reconhecida pela excelência operacional, inovação em logística de motoboy e compromisso com a satisfação do cliente. Buscamos ser sinônimo de agilidade, confiança e parceria, tornando-nos o elo essencial entre empresas, clientes e suas necessidades de entrega no dia a dia.</p>
         </article>
-
         <article class="card light">
-          <div class="icon-wrap"><span class="icon">👥</span></div>
+          <div class="icon-wrap"><span class="icon">🌟</span></div>
           <h3>Nossos Valores</h3>
-          <p>Agilidade, Segurança, Transparência, Foco no Cliente e Inovação contínua.</p>
+          <p>⚡ <strong>Agilidade:</strong> Entregas rápidas por motoboy, reduzindo prazos e ganhando tempo para os clientes.</p>
+          <p>🛡️ <strong>Segurança:</strong> Garantia de que cada pacote será transportado com cuidado e responsabilidade.</p>
+          <p>🤝 <strong>Transparência:</strong> Informações claras sobre coletas e prazos de entrega.</p>
+          <p>👥 <strong>Foco no Cliente:</strong> Soluções personalizadas para atender empresas e pessoas com eficiência.</p>
         </article>
       </div>
     </div>
